Fix invisible menu bar

--- a/src/index.scss
+++ b/src/index.scss
@@ -38,7 +38,7 @@ body {
   color: $primary;
 }
 
-.App .nav-link,
+.App .navbar-brand .nav-link,
 .App .nav-tabs .nav-item {
   color: $primary;
 }
